# rust-embedded-xx-hal-modules-check

./: Cargo.toml  README.md
.github/workflows/: CI.yaml
examples/: level-1.rs  level-2.rs  level-3.rs  lv-0  lv-0.rs  lv-1b.rs  lv-2.rs  lv-3  lv-x.rs
src/: lib.rs
