[package]
authors = ["Paul Gilbert"]
categories = ["embedded", "no-std"]
description = "check hal module structure and common peripherals"
keywords = ["rust-embedded", "hal", "Peripherals", "CorePeripherals"]
license = "MIT OR Apache-2.0"
name = "rust-embedded-xx-hal-module-check"
version = "0.0.1"
edition = "2021"

[dependencies]
                                                    
stm32f0xx-hal = { git = "https://github.com/stm32-rs/stm32f0xx-hal", optional = true }
stm32f1xx-hal = { git = "https://github.com/stm32-rs/stm32f1xx-hal", optional = true }
stm32f3xx-hal = { git = "https://github.com/stm32-rs/stm32f3xx-hal", optional = true }
stm32f4xx-hal = { git = "https://github.com/stm32-rs/stm32f4xx-hal", optional = true } 
stm32f7xx-hal = { git = "https://github.com/stm32-rs/stm32f7xx-hal", optional = true }
stm32g0xx-hal = { git = "https://github.com/stm32-rs/stm32g0xx-hal", optional = true }
stm32g4xx-hal = { git = "https://github.com/stm32-rs/stm32g4xx-hal", optional = true }
stm32h7xx-hal = { git = "https://github.com/stm32-rs/stm32h7xx-hal", optional = true }
stm32l0xx-hal = { git = "https://github.com/stm32-rs/stm32l0xx-hal", optional = true }
#stm32l1xx-hal = { git = "https://github.com/stm32-rs/stm32l1xx-hal", optional = true, default-features = false}
stm32l1xx-hal = { git = "https://github.com/TheCallSign/stm32l1xx-hal", optional = true, default-features = false}
stm32l4xx-hal = { git = "https://github.com/stm32-rs/stm32l4xx-hal", optional = true }


cortex-m-rtic = ">=1.0" 
#cortex-m-rtic = { git = "https://github.com/rtic-rs/cortex-m-rtic" }
systick-monotonic = {version = "1.0.0", optional = true }
#systick-monotonic = { git = "https://github.com/rtic-rs/systick-monotonic.git", optional = true }
#dwt-systick-monotonic = {version = "1.0" , optional = true }  # needed for adc_dma_rtic fiddling but if not optional it stops build with stm32f0xx
dwt-systick-monotonic = {git = "https://github.com/rtic-rs/dwt-systick-monotonic" , optional = true }

# for duration timer in rtic
fugit = { version = "0.3.3", optional = true }
#fugit = { git = "https://github.com/korken89/fugit", optional = true }

embedded-hal = {version = "^0.2.4" }

#embedded-hal  1.0.0-alpha
#e-h-1a = { version = "1.0.0-alpha.7,<1.0.0-alpha.8", package = "embedded-hal" }  

#embedded-graphics = ">=0.7"

#cortex-m = ">=0.7"
cortex-m-rt = ">=0.7.0"

cortex-m-semihosting = { version = "0.3.7" }
panic-semihosting    = { version = ">=0.5.2" }
panic-reset          = { version = ">=0.1.0" }
panic-halt           = { version = ">=0.2.0" }
void                 = { version = ">=1.0.2", default-features = false } # err return values in some hals


[features]

stm32f0xx = ["stm32f0xx-hal/rt", "systick-monotonic"]
stm32f1xx = ["stm32f1xx-hal/rt", "systick-monotonic"]
stm32f3xx = ["stm32f3xx-hal/rt", "systick-monotonic"]
stm32f4xx = ["stm32f4xx-hal/rt", "systick-monotonic", "dwt-systick-monotonic"]
stm32f7xx = ["stm32f7xx-hal/rt", "systick-monotonic"]
stm32g0xx = ["stm32g0xx-hal/rt", "systick-monotonic"]
stm32g4xx = ["stm32g4xx-hal/rt", "systick-monotonic"]
stm32h7xx = ["stm32h7xx-hal/rt", "systick-monotonic"]
stm32l0xx = ["stm32l0xx-hal/rt", "systick-monotonic"]
stm32l1xx = ["stm32l1xx-hal/rt", "systick-monotonic"]
stm32l4xx = ["stm32l4xx-hal/rt", "systick-monotonic"]

stm32f030xc   = ["stm32f0xx-hal/stm32f030xc"]
stm32f042     = ["stm32f0xx-hal/stm32f042"  ]
stm32f100     = ["stm32f1xx-hal/stm32f100"  ]
stm32f101     = ["stm32f1xx-hal/stm32f101"  ]
stm32f103     = ["stm32f1xx-hal/stm32f103",    "stm32f1xx-hal/medium"]
stm32f303xc   = ["stm32f3xx-hal/stm32f303xc"] 
stm32f401     = ["stm32f4xx-hal/stm32f401"  ] 
stm32f405     = ["stm32f4xx-hal/stm32f405"  ] 
stm32f411     = ["stm32f4xx-hal/stm32f411"  ] 
stm32f722     = ["stm32f7xx-hal/stm32f722"  ] 
stm32f769     = ["stm32f7xx-hal/stm32f769"  ]
stm32g081     = ["stm32g0xx-hal/stm32g081"  ]
stm32g473     = ["stm32g4xx-hal/stm32g473"  ]
stm32h742     = ["stm32h7xx-hal/stm32h742"  ]
stm32l0x2kztx = ["stm32l0xx-hal/stm32l0x2",     "stm32l0xx-hal/mcu-STM32L072KZTx"]
stm32l100     = ["stm32l1xx-hal/stm32l100"  ]
stm32l151     = ["stm32l1xx-hal/stm32l151"  ]
stm32l471     = ["stm32l4xx-hal/stm32l471"  ]
stm32l422     = ["stm32l4xx-hal/stm32l422"  ]
stm32l486     = ["stm32l4xx-hal/stm32l486"  ]


[[example]]
name = "lv-0"
path = "examples/lv-0.rs"
